--- a/Final_Face_Emotion_Recognition.ipynb
+++ b/Final_Face_Emotion_Recognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Final Face Emotion Recognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqd/150o6icyrrsdkBJ5Oe",
+      "authorship_tag": "ABX9TyO9tyAi6qcEE0DfCNfJCqMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Project Name\n",
+        "## Live Class Monitoring System(Face Emotion Recognition)\n",
+        "### This is a Team Project and here is a notebook:-\n",
+        "1. Pranaysagar Bhelave\n",
+        "2. Kunal Tembhare\n",
+        "3. Ankush Bhandarkar\n",
+        "## Project Introduction\n",
+        "The Indian education landscape has been undergoing rapid changes for the past 10 years owing to the advancement of web-based learning services, specifically, eLearning platforms.\n",
+        "Global E-learning is estimated to witness an 8X over the next 5 years to reach USD 2B in 2021. India is expected to grow with a CAGR of 44% crossing the 10M users mark in 2021. Although the market is growing on a rapid scale, there are major challenges associated with digital learning when compared with brick and mortar classrooms.\n",
+        "One of many challenges is how to ensure quality learning for students. Digital platforms might overpower physical classrooms in terms of content quality but when it comes to understanding whether students are able to grasp the content in a live class scenario is yet an open-end challenge.\n",
+        "In a physical classroom during a lecturing teacher can see the faces and assess the emotion of the class and tune their lecture accordingly, whether he is going fast or slow. He can identify students who need special attention.\n",
+        "Digital classrooms are conducted via video telephony software program (exZoom) where it’s not possible for medium scale class (25-50) to see all students and access the mood. Because of this drawback, students are not focusing on content due to lack of surveillance.\n",
+        "While digital platforms have limitations in terms of physical surveillance but it comes with the power of data and machines which can work for you. It provides data in the form of video, audio, and texts which can be analysed using deep learning algorithms.\n",
+        "Deep learning backed system not only solves the surveillance issue, but it also removes the human bias from the system, and all information is no longer in the teacher’s brain rather translated in numbers that can be analysed and tracked.\n",
+        "Problem Statement\n",
+        "We will solve the above-mentioned challenge by applying deep learning algorithms to live video data.\n",
+        "The solution to this problem is by recognizing facial emotions.\n",
+        "What is Face Emotion Recognition ?\n",
+        "Facial expression recognition software is a technology which uses biometric markers to detect emotions in human faces. More precisely, this technology is a sentiment analysis tool and is able to automatically detect the six basic or universal expressions: happiness, sadness, anger, surprise, fear, and disgust."
+      ],
+      "metadata": {
+        "id": "YujxWnzhNVJ1"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "71A8WlRPdKmB",
         "colab": {
@@ -64,7 +91,7 @@
         "id": "yPgaEdRqY4LP",
         "outputId": "08b2ba7d-2ec0-479a-8fba-7e443ea8b2f7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +133,7 @@
       "metadata": {
         "id": "K-jB8a-fZRIU"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +158,7 @@
       "metadata": {
         "id": "9Vr2rTx5ZRFE"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +170,7 @@
       "metadata": {
         "id": "QOF__-EZZRB1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +181,7 @@
       "metadata": {
         "id": "TEBCcM87ZQ-0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +213,7 @@
       "metadata": {
         "id": "zS_s9irHZQ7u"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +245,7 @@
         "id": "56nve1etZQ4d",
         "outputId": "e24923b4-a50b-45c0-e272-84f680b8c683"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +306,7 @@
         "id": "NQpr9946ZQ02",
         "outputId": "e6bbabcf-dd6f-4046-cba8-e92ada76d912"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +327,7 @@
       "metadata": {
         "id": "sH-fVrpDZg3e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +342,7 @@
         "id": "K72rD3EVZg0c",
         "outputId": "42b783e3-07af-4381-a1b6-7937fc59c122"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +433,7 @@
         "id": "svww1DzoZgw8",
         "outputId": "82b1e985-3d47-4021-8526-99bc635146c1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +595,7 @@
         "id": "jBeVVFBxZgt0",
         "outputId": "12835e46-e42c-4fec-90e7-80016dcbb8b9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -592,7 +619,7 @@
       "metadata": {
         "id": "hIBXiqspZgqt"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +638,7 @@
         "id": "QN5EZpNjZgnP",
         "outputId": "f04bddce-33c3-4fba-b208-d7ae1f520053"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +669,7 @@
       "metadata": {
         "id": "4kPURTyJaCka"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -661,7 +688,7 @@
         "id": "YOkgK90qaCgv",
         "outputId": "cf1c41e7-b882-49a7-8718-6c896dfe2dbc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +713,7 @@
         "id": "sG4WeikoaCdc",
         "outputId": "6b5dcacd-8a8f-4ec5-e31b-68758d821734"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +738,7 @@
         "id": "dLB-FXIaaCaF",
         "outputId": "34e2001d-079d-4b6f-ee96-aaef4822d3ad"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,13 +759,16 @@
       "metadata": {
         "id": "Spc5yTOgaCWm"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "# Thus we use kaggle kernal gpu to run this code because if it run cpu it take 6hrs we have get a nice accuracy in the model 72.68 in train and valid is 66.48 this our first method. We use data augmentation it useful Data augmentation is a strategy that enables practitioners to significantly increase the diversity of data available for training models, without actually collecting new data. Data augmentation techniques such as cropping, padding, and horizontal flipping are commonly used to train large neural networks.\n",
+        "\n",
+        "\n",
+        "# Method 2"
       ],
       "metadata": {
         "id": "PpDB5JZkaU4M"
@@ -760,7 +790,7 @@
       "metadata": {
         "id": "yF-bFieAaUo8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,7 +805,7 @@
         "id": "Tm9QRmGdaUlT",
         "outputId": "e86f47f9-e7c1-4db8-d6bd-bb410fba90aa"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,7 +861,7 @@
       "metadata": {
         "id": "qMtrxStRaUh0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -849,7 +879,7 @@
         "id": "UP4ZrJEfatlH",
         "outputId": "1bc264f6-3d01-480b-cb4d-e1a5810071fe"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1051,7 @@
       "metadata": {
         "id": "oTFioi25ath9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1066,7 @@
         "id": "hi5Njpukatel",
         "outputId": "091e986b-e353-4c5a-bcf8-c4d05aff338a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1062,7 +1092,7 @@
         "id": "n2MIk2vzcHpV",
         "outputId": "9da5ff7a-f63f-4d00-e0cf-9ca66975d26c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1097,7 +1127,7 @@
         "id": "SA-RdJkXcHmW",
         "outputId": "3ebfa0a5-b1c7-4499-c1b3-2e1d11e2c064"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,6 +1152,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## So majority classes belongs to 3:Happy, 4:Sad and 6:Neutral and after we ran the code and apply model in realtime video check it not good to predict disgust because of less image."
+      ],
+      "metadata": {
+        "id": "pOnLV6hrUb-v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "math.sqrt(len(df.pixels[0].split(' ')))"
@@ -1133,7 +1172,7 @@
         "id": "OKv5xHLHcHi-",
         "outputId": "74b1eb4b-ad41-4e21-e123-327de2fd5508"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1174,7 +1213,7 @@
         "id": "cXkqOg6lcHfl",
         "outputId": "31f50985-a31e-448e-9fe7-22507d7d701e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1196,7 +1235,7 @@
       "metadata": {
         "id": "4umWihQocaKd"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1251,7 @@
         "id": "5Ev0NnEscaHF",
         "outputId": "ebf385db-6add-47ce-f71d-d99bed41172b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1235,7 +1274,7 @@
       "metadata": {
         "id": "9aiJ_r9WcaDt"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1250,7 +1289,7 @@
         "id": "Zz3HmTyncjk9",
         "outputId": "cee11078-2558-4e11-eb0d-6047f913ba4d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1279,7 +1318,7 @@
         "id": "EDPfJWghcjhf",
         "outputId": "21aca571-a33e-4ca2-9b74-73f3f0b211a8"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1306,7 +1345,7 @@
         "id": "SDTtrE2tcjeG",
         "outputId": "b78561c7-5e6b-4d10-d291-42ec49d1868d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1332,7 +1371,7 @@
         "id": "X8Vk-yTacja1",
         "outputId": "c30f45d9-b32e-470d-9adf-5808e4f65d50"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1356,7 +1395,7 @@
       "metadata": {
         "id": "mj-Eeym1exnm"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1370,7 +1409,7 @@
       "metadata": {
         "id": "0IVqLT1Texkl"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1383,7 +1422,7 @@
       "metadata": {
         "id": "Dba4ZTb6exhQ"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1512,7 +1551,7 @@
       "metadata": {
         "id": "Osyx6rcYexdt"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1547,7 +1586,7 @@
       "metadata": {
         "id": "tk8wzYAyexal"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1567,7 +1606,7 @@
       "metadata": {
         "id": "zrq5Iw82exXO"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1598,7 +1637,7 @@
         "id": "ZvjHR2QyfGTc",
         "outputId": "88f77704-3923-4b05-d477-b056b997e4b3"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1832,7 +1871,7 @@
       "metadata": {
         "id": "PvEfI3IjfGQG"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1864,7 +1903,7 @@
         "id": "SAdUqtV-fGMg",
         "outputId": "5cb601df-e75c-4160-efeb-9cf1a021c710"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1891,6 +1930,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## The epochs history shows that accuracy gradually increases and achieved +83% accuracy on both training and validation set, but at the end the model starts overfitting training data.In this case we use Deep convolutional neural network, has recently been applied to image classification with large image datasets. A deep CNN is able to learn basic filters automatically and combine them hierarchically to enable the description of latent concepts for pattern recognition."
+      ],
+      "metadata": {
+        "id": "OeAel5usU9Su"
+      }
     },
     {
       "cell_type": "code",
@@ -1920,7 +1968,7 @@
         "id": "q1b-qgTmfGI-",
         "outputId": "b44c0e57-d6c0-4f9c-9eb8-a9a040f6a8d7"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1948,12 +1996,11 @@
       "metadata": {
         "id": "jV_NN9j6fGFu",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 677
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "35832ba2-0c3d-406c-c8bc-b5cc359d5765"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
