--- a/Final_Face_Emotion_Recognition.ipynb
+++ b/Final_Face_Emotion_Recognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Final Face Emotion Recognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9tyAi6qcEE0DfCNfJCqMS",
+      "authorship_tag": "ABX9TyNSUF0WqVwh5Ck/8BuoZLKu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,10 @@
         "1. Pranaysagar Bhelave\n",
         "2. Kunal Tembhare\n",
         "3. Ankush Bhandarkar\n",
-        "## Project Introduction\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Project Introduction\n",
         "The Indian education landscape has been undergoing rapid changes for the past 10 years owing to the advancement of web-based learning services, specifically, eLearning platforms.\n",
         "Global E-learning is estimated to witness an 8X over the next 5 years to reach USD 2B in 2021. India is expected to grow with a CAGR of 44% crossing the 10M users mark in 2021. Although the market is growing on a rapid scale, there are major challenges associated with digital learning when compared with brick and mortar classrooms.\n",
         "One of many challenges is how to ensure quality learning for students. Digital platforms might overpower physical classrooms in terms of content quality but when it comes to understanding whether students are able to grasp the content in a live class scenario is yet an open-end challenge.\n",
